solve conflicts in handling button onclick - design.js: in protocol-button onclick Conflicts:

--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -341,6 +341,39 @@
     </div>
   </div>
 
+  <!-- protocol modal -->
+  <div id="protocol-modal" class="ui tiny modal" style="overflow-y: scroll; max-height: 80%;">
+    <div class="ui header"> protocol </div>
+    <div class="content">
+      <form class="ui form" id="protocol-form"> {% csrf_token %}
+        <!-- using vue.js -->
+
+        <div class="field">
+          <label>Protocol Title</label>
+          <input type="text" v-model="title" placeholder="Title...">
+        </div>
+        <div class="field">
+          <label>Description</label>
+          <textarea rows="3" v-model="description" placeholder="description here..."></textarea>
+        </div>
+
+        <step-item 
+          v-for="(item, index) in stepsList" 
+          v-bind:data="item"
+          v-bind:key="item.id"
+          v-bind:i="index"
+          v-on:remove-step="removeStep(index)"
+        ></step-item>
+
+        <div class="ui right floated primary button" v-on:click="add"> Add </div>
+        <div class="ui button" v-on:click="submit">Submit</div>
+
+        <!-- end using vue.js -->
+      </form>
+    </div>
+  </div>
+
+
   <div class="ui page dimmer">
     <div class="content">
       <div class="ui text loader"></div>
@@ -552,6 +585,7 @@
   </div>
 
 </body>
+<script src="/static/js/vue.js"></script>
 <script src="/static/js/jquery.min.js"></script>
 <script src="/static/js/jquery-ui/jquery-ui.min.js"></script>
 <script src="/static/js/jquery.mousewheel.min.js"></script>
