[feature] finish protocol editor backend Squashed commit of the following:
commit 0bf25a15625d60a876433ed210aede52e88492f6
Author: YanB25 <yanb25@mail2.sysu.edu.cn>
Date:   Thu Aug 30 21:22:58 2018 +0800

    [fix] important fix
    when dimmer of protocol modal is clicked, all changed should be dropped.
    1. use dict={} and $.extend(true, dict, xxx) to implement "deep assign".
    1. when dimmer or submit or load-curcuit is clicked, protocol should be
    changed accordingly.

commit acec3f771c9cf9193a91ff7a9a7c51a57744f71d
Author: YanB25 <yanb25@mail2.sysu.edu.cn>
Date:   Thu Aug 30 19:47:30 2018 +0800

    [fix] fix typo in design_views.py

commit e6f56a1b4103d54bed8a5bb787a1e8fffcbedf0d
Author: YanB25 <yanb25@mail2.sysu.edu.cn>
Date:   Thu Aug 30 19:37:23 2018 +0800

    [feature] finish protocol editor. need more debug

commit efbb178477a9f527ca1d8810f8d74622f5386464
Author: YanB25 <yanb25@mail2.sysu.edu.cn>
Date:   Thu Aug 30 19:09:03 2018 +0800

    [fix] fix KeyError
    design_views.py: maybe the json getting from frontent do not have a
    protocol dict. in the case, just ignore and log into the terminal

commit 0ee4eae9d93aafe3f5192a047ab5593152c92a88
Author: YanB25 <yanb25@mail2.sysu.edu.cn>
Date:   Thu Aug 30 18:48:12 2018 +0800

    make migrations

commit d9faa55c90e69951725cb63d55ca80736dc2a025
Author: YanB25 <yanb25@mail2.sysu.edu.cn>
Date:   Thu Aug 30 18:43:47 2018 +0800

    temporary finish protocl editor backend.
    - bio.py: add Protocol and Step class.
    - design.html: trivial, change varialble name
    - design_view.py: add save and query logic of protocol and steps in `def
      circuit(request)`
    - canvas.js: add protocol dict into design.design
    - design.js: add sending and reseiving logic

--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -350,15 +350,15 @@
 
         <div class="field">
           <label>Protocol Title</label>
-          <input type="text" v-model="title" placeholder="Title...">
+          <input type="text" v-model="protocol.title" placeholder="Title...">
         </div>
         <div class="field">
           <label>Description</label>
-          <textarea rows="3" v-model="description" placeholder="description here..."></textarea>
+          <textarea rows="3" v-model="protocol.description" placeholder="description here..."></textarea>
         </div>
 
         <step-item 
-          v-for="(item, index) in stepsList" 
+          v-for="(item, index) in protocol.steps" 
           v-bind:data="item"
           v-bind:key="item.id"
           v-bind:i="index"
