analysis api complete

--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -387,7 +387,7 @@
       
       <div class="ui divider"></div>
       
-      <button class="fluid ui button" id="analysis-button">Analysis</button>
+      <button class="fluid ui button" id="analysis-sequence-button">Analysis</button>
     </div>
   </div>
 
