modify analysis-modal frontend add a "add to sequence" button

--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -296,6 +296,8 @@
         </div>
         <br>
         <span id="selected-part-sequence">Selected Part Sequence here</span>
+        <br>
+        <div class="ui button" id="add-to-sequence-button"> add to sequence</div>
       </div>
 
       <div class="ui divider"></div>
