--- a/designSite/account/templates/register.html
+++ b/designSite/account/templates/register.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>Register - S-Din</title>
+    <title>Register - CO-RAD</title>
     <link rel="shortcut icon" href="/static/img/favicon.png">
     <link rel="stylesheet" href="/static/css/fontsize.css">
     <link rel="stylesheet" href="/static/semantic/dist/semantic.min.css">
@@ -33,8 +33,8 @@
             </div>
           </div>
       {% else %}
-      <div class="header">
-          Register
+      <div class="ui center aligned header">
+          Sign Up
         </div>
         <div class="content">
           <div class="ui center aligned container">
@@ -69,11 +69,12 @@
               </div>
             </form>
             <br/>
-            <p class="small">If you register an account or log in S-Din, it indicates that you agree <a id="policy">our policies</a>.</p>
+            <p class="small">If you register an account or log in CO-RAD, it indicates that you agree <a id="policy">our policies</a>.</p>
           </div>
         </div>
-          <div class="ui one bottom attached big buttons" id="button-group">
-            <div class="ui submit secondary button"id="next-button">Next</div>
+          <div class="ui two bottom attached big buttons" id="button-group">
+            <div class="ui left button" id="login-button">Signin</div>
+            <div class="ui submit secondary button"id="register-button">Signup</div>
           </div>
       {% endif %}
     
@@ -81,8 +82,8 @@
 
   <div class="ui tiny modal" id="policy-modal">
     <div class="content">
-      <p><b>Welcome to S-Din!</b> S-Din is open and free for everyone who is interested in synthetic biology.</p>
-      <p>You should register a free account and log in if you want to use the whole functions of S-Din. Please attention that when you log in S-Din, we may collect and use some of your information. If your operation on S-Din is considered against biosafety rules, you may be warned. We guarantee that your privacy will be well protected, and won’t be rumoured deliberately. See <a href="http://2017.igem.org/Team:SYSU-Software/statements.html">Terms & Conditions</a> for more details.</p>
+      <p><b>Welcome to CO-RAD!</b> CO-RAD is open and free for everyone who is interested in synthetic biology.</p>
+      <p>You should register a free account and log in if you want to use the whole functions of CO-RAD. Please attention that when you log in CO-RAD, we may collect and use some of your information. If your operation on CO-RAD is considered against biosafety rules, you may be warned. We guarantee that your privacy will be well protected, and won’t be rumoured deliberately. See <a href="http://2017.igem.org/Team:SYSU-Software/statements.html">Terms & Conditions</a> for more details.</p>
     </div>
     <div class="ui bottom attached big buttons">
       <div class="ui ok button" id="cancel">OK</div>
