--- a/designSite/account/templates/personal_index.html
+++ b/designSite/account/templates/personal_index.html
@@ -11,9 +11,9 @@
   <div class="ui inverted vertical masthead center aligned segment">
     <div class="ui container">
       <div class="ui large secondary inverted pointing menu">
-        <a class="active item">Home</a>
+        <a class="item">An Icon Please</a>
         <div class="right item">
-          <h5>{{ user.username }}</h5>
+          <h5>Welcome, {{ user.username }} !</h5>
         </div>
         <div class="item">
           <a id="logout" class="ui inverted button">Log out</a>
