--- a/designSite/account/templates/personal_index.html
+++ b/designSite/account/templates/personal_index.html
@@ -37,14 +37,18 @@
         <div class="ui seven wide column card">
           <div class="ui content">
             <h5>Parts</h5>
-            {% for part in parts %}
-            <div class="ui segment" data-id={{ part.id }} data-name={{ part.name }}>
-              <p><b>ID: </b>{{ part.ID }}</p>
-              <p><b>Name: </b>{{ part.Name }}</p>
-              <p><b>Role: </b>{{ part.Role }}</p>
-              <p><b>Description: </b>{{ part.Description }}</p>
-            </div>
-            {% endfor %}
+            {% if parts %}
+              {% for part in parts %}
+              <div class="ui segment" data-id={{ part.id }} data-name={{ part.name }}>
+                <p><b>ID: </b>{{ part.ID }}</p>
+                <p><b>Name: </b>{{ part.Name }}</p>
+                <p><b>Role: </b>{{ part.Role }}</p>
+                <p><b>Description: </b>{{ part.Description }}</p>
+              </div>
+              {% endfor %}
+            {% else %}
+              <p> You have no part added. </p>
+            {% endif %}
           </div>
         </div>
 
@@ -54,16 +58,20 @@
         <div class="ui seven wide column card">
           <div class="ui content">
             <h5>Circuits</h5>
-            {% for circuit in circuits %}
-            <div class="ui segment" data-id={{ circuit.id }} data-name={{ circuit.name }}>
-              <p><b>ID: </b>{{ circuit.ID }}</p>
-              <p><b>Name: </b>{{ circuit.Name }}</p>
-              <p><b>Version: </b>
-                <!--TODO: {{ circuit.Version }}-->
-              </p>
-              <p><b>Description: </b>{{ circuit.Description }}</p>
-            </div>
-            {% endfor %}
+            {% if circuits %}
+              {% for circuit in circuits %}
+              <div class="ui segment" data-id={{ circuit.id }} data-name={{ circuit.name }}>
+                <p><b>ID: </b>{{ circuit.ID }}</p>
+                <p><b>Name: </b>{{ circuit.Name }}</p>
+                <p><b>Version: </b>
+                  <!--TODO: {{ circuit.Version }}-->
+                </p>
+                <p><b>Description: </b>{{ circuit.Description }}</p>
+              </div>
+              {% endfor %}
+            {% else %}
+            <p> You have no circuit added.</p>
+            {% endif %}
           </div>
         </div>
 
