--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -151,7 +151,7 @@
   </div>
 
   <!-- Main canvas -->
-  <div id="canvas-box" design-id="{{ request.GET.id }}">
+  <div id="canvas-box" design-id="{{ designID }}">
     <div id="canvas"></div>
   </div>
 
