--- a/designSite/account/templates/index.html
+++ b/designSite/account/templates/index.html
@@ -10,7 +10,9 @@
   <div class="ui inverted vertical masthead center aligned segment">
     <div class="ui container">
       <div class="ui large secondary inverted pointing menu">
-        <a class="item">An Icon Please</a>
+        <a class="item" href="/">
+          <img id="logo" src="/static/img/logo.png">
+        </a>
         {% if user.is_authenticated %}
         <div class="right item">
           <h5>Welcome, {{ user.username }}!</h5>
