--- a/designSite/account/templates/personal_index.html
+++ b/designSite/account/templates/personal_index.html
@@ -12,7 +12,9 @@
   <div class="ui inverted vertical masthead center aligned segment">
     <div class="ui container">
       <div class="ui large secondary inverted pointing menu">
-        <a class="item">An Icon Please</a>
+        <a class="item">
+          <img id="logo" src="/static/img/logo.png">
+        </a>
         <div class="right item">
           <h5>Welcome, {{ user.username }} !</h5>
         </div>
