--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -5,7 +5,7 @@
 <head>
   <title>Designer</title>
 
-  <!-- <link rel="shortcut icon" href="/static/img/favicon.png"> -->
+  <link rel="shortcut icon" href="/static/img/favicon.png">
   <link rel="stylesheet" href="/static/css/fontsize.css">
   <link rel="stylesheet" href="/static/semantic/dist/semantic.min.css"> 
   <link rel="stylesheet" href="/static/css/design.css">
@@ -107,17 +107,10 @@
           <div class="default text">Ratio</div>
         </div>
       </span>
-
-      <!-- Temporarily comment the logo -->
-      <!-- <span class="item">
-        <a href="/">
-          <img id="logo" src="/static/img/logo-black.png">
-        </a>
-      </span> -->
-
+      
       <span id="logo" class="item">
         <a href="/account/">
-          <p>Account</p>
+          <img id="logo" src="/static/img/logo.png">
         </a>
       </span>
     </div>
